# ChangeLog for app-misc/rlwrap
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/rlwrap/ChangeLog,v 1.14 2007/12/08 16:34:07 drac Exp $

  08 Dec 2007; Samuli Suominen <drac@gentoo.org> rlwrap-0.24.ebuild:
  amd64 stable wrt #201216

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> rlwrap-0.24.ebuild:
  Remove debug.eclass usage.

  07 May 2006; Jason Wever <weeve@gentoo.org> rlwrap-0.21.ebuild:
  Stable on SPARC.

*rlwrap-0.24 (20 Dec 2005)

  20 Dec 2005; Aron Griffis <agriffis@gentoo.org> +rlwrap-0.24.ebuild:
  Bump to 0.24 (from 0.21).  Add support for USE=debug #113490

  05 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> rlwrap-0.21.ebuild:
  Stable on ppc.

  12 May 2005; Stephanie Lockwood-Childs <wormo@gentoo.org>
  rlwrap-0.21.ebuild:
  mark ~ppc

*rlwrap-0.21 (06 Apr 2005)

  06 Apr 2005; Matthew Kennedy <mkennedy@gentoo.org> +rlwrap-0.21.ebuild:
  New upstream version; Resolves Bug #87567; Keywording ~amd64.

*rlwrap-0.18 (08 Nov 2004)

  08 Nov 2004; Matthew Kenendy <mkennedy@gentoo.org> +rlwrap-0.18.ebuild:
  New upstream version; Resolves Bug #68629

  28 Jun 2004; Ciaran McCreesh <ciaranm@gentoo.org> rlwrap-0.16.ebuild:
  Added ~sparc, ~mips

*rlwrap-0.16 (27 Aug 2003)

  27 Aug 2003; Matthew Kennedy <mkennedy@gentoo.org> :
  Initial import.  