@@ -1,4 +1,4 @@
 DIST rlwrap-0.24.tar.gz 150698 RMD160 9eff05500a258b921a67ff71b501e466c4757c20 SHA1 55e4dab20bbfec8899fd64c2d80ed05264d45490 SHA256 f2ad78abf9ae30ca610e875a69fbcaa2fdf0d8450ddc266efb24cf1590f031a2
-EBUILD rlwrap-0.24.ebuild 760 RMD160 b726baf01770cb069bf31fa28d597f5787e3eaf5 SHA1 c7475a1f74bd5c33f65771bb2756d0035659dc71 SHA256 a65d826227543135cbdf7396d7e455e9b6a47a04c98b208cd8d0750738e301d6
-MISC ChangeLog 1442 RMD160 dc3efaade2afe8721b1685c80906194a09fb92d4 SHA1 6939341c9518f85ff9788da21d62d16e6f5f3862 SHA256 35e6f0fb35877c97d67f2a55bcd3ae052a56cbb1eb3591848f126ae7f02ac319
+EBUILD rlwrap-0.24.ebuild 784 RMD160 7f3cb9f0036abb49bc4e75ecb472420058a5bb10 SHA1 28676fa4ffa4d27a57d8aa32e1309af02cc988e7 SHA256 34993980b5d5160245bb32887eb75d7eba0a13f177f8c324de979d3b72de4369
+MISC ChangeLog 1539 RMD160 f29548a307225e7c2f61f9cb9cb44021ba3f1ae9 SHA1 ef4d0862ea11cb3857456909c685c66eaf7a8198 SHA256 0524cbc1043d71a84e4bab8322e4285394f3a351f90ebd54ee416a14183daf5c
 MISC metadata.xml 542 RMD160 613f500888d2f1a68573865c1fc743aa83e82df0 SHA1 660e75103690a6d7d1675076f0611aaadc324849 SHA256 c1cf0f30b47048750c1e51345caeb3a14b6f88cfbf9fb57e8ae98a9d1f45906c
