@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/rlwrap/rlwrap-0.24.ebuild,v 1.5 2007/12/08 16:34:07 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/rlwrap/rlwrap-0.24.ebuild,v 1.6 2008/01/14 19:58:33 dertobi123 Exp $
 
 EAPI="prefix"
 
@@ -10,7 +10,7 @@ SRC_URI="http://utopia.knoware.nl/~hlub/uck/rlwrap/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~mips ~ppc-macos ~x86 ~x86-macos"
+KEYWORDS="~amd64-linux ~mips-linux ~x86-linux ~ppc-macos ~x86-macos"
 IUSE="debug"
 
 DEPEND="sys-libs/readline"
