@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/rlwrap
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/rlwrap/ChangeLog,v 1.14 2007/12/08 16:34:07 drac Exp $
+# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/rlwrap/ChangeLog,v 1.15 2008/01/14 19:58:33 dertobi123 Exp $
+
+  14 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> rlwrap-0.24.ebuild:
+  ppc. stable
 
   08 Dec 2007; Samuli Suominen <drac@gentoo.org> rlwrap-0.24.ebuild:
   amd64 stable wrt #201216
